--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "watch:autoprefixer": "onchange -d 100 css/style.css -- autoprefixer-cli -o css/style.prefixed.css css/style.css",
     "watch:browersync": "node_modules/.bin/browser-sync start --server --files css/*.css *.html",
     "watch:sassprefixer": "npm-run-all watch:sass watch:autoprefixer",
-    "start": "babel script.js --watch --out-file script-compiled.js"
+    "start": "babel js/script.js --watch --out-file script-compiled.js"
   },
   "keywords": [],
   "author": "",
